# darknet

./: .gitignore  CMakeLists.txt
include/: darknet.h
src/: detection_layer.c  image.c  image.h  network.c  network.h  option_list.h  parser.c  parser.h  region_layer.c  utils.h
wrapper/include/: yolowrapper.h
wrapper/src/: yolowrapper.cpp
